--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <section class="search">
       <h2 class="title">Filtrar / Buscar</h2>
       <form class="form">
-        <input class="input" type="text" placeholder="Descripción" />
-        <input class="input" type="select" name="raza" placeholder="Raza" id="raza" />
+        <input class="input" type="text" placeholder="Descripción" class="js_in_search_desc" />
+        <input class=" input" type="select" name="raza" placeholder="Raza" id="raza" />
 
         <button class="button">Buscar</button>
       </form>
