--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </header>
 
   <main>
-    <section class="new-form collapsed js-new-form">
+    <section class="new-form  js-new-form">
       <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
       <form class="form">
         <input class="input" type="text" placeholder="Url de la foto" required />
@@ -53,7 +53,7 @@
     <section class="search">
       <h2 class="title">Filtrar / Buscar</h2>
       <form class="form">
-        <input class="input" type="text" placeholder="Descripción" class="js_in_search_desc" />
+        <input class="input js_in_search_desc" type="text" placeholder="Descripción" value='cariñoso' />
         <input class=" input" type="select" name="raza" placeholder="Raza" id="raza" />
 
         <button class="button">Buscar</button>
