--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav class="menu-nav">
         <ul class="menu">
           <li class="item">
-            <span class="fas fa-plus-circle"> </span>
+            <span class="fas fa-plus-circle js-cross"> </span>
           </li>
         </ul>
       </nav>
@@ -35,12 +35,12 @@
     <section class="new-form  js-new-form">
       <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
       <form class="form">
-        <input class="input" type="text" placeholder="Url de la foto" required />
-        <input class="input" type="text" placeholder="Nombre" required />
+        <input class="input js-input-photo" type="text" placeholder="Url de la foto" required />
+        <input class="input js-input-name" type="text" placeholder="Nombre" required />
         <input class="input" type="text" placeholder="Raza" />
-        <input class="input" type="text" placeholder="Descripción" required />
-        <label class=""></label>
-        <button class="button">Añadir</button>
+        <input class="input js-input-desc" type="text" placeholder="Descripción" required />
+        <label class="js-label-error"></label>
+        <button class="button js-btn-add">Añadir</button>
         <button class="button-cancel">Cancelar</button>
       </form>
     </section>
@@ -53,7 +53,7 @@
     <section class="search">
       <h2 class="title">Filtrar / Buscar</h2>
       <form class="form">
-        <input class="input js_in_search_desc" type="text" placeholder="Descripción" value='cariñoso' />
+        <input class="input js_in_search_desc" type="text" placeholder="Descripción" value='' />
         <input class=" input" type="select" name="raza" placeholder="Raza" id="raza" />
 
         <button class="button">Buscar</button>
