--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <input class="input js-input-desc" type="text" placeholder="Descripción" required />
         <label class="js-label-error"></label>
         <button class="button js-btn-add">Añadir</button>
-        <button class="button-cancel">Cancelar</button>
+        <button class="button-cancel js-btn-cancel">Cancelar</button>
       </form>
     </section>
 
@@ -54,9 +54,10 @@
       <h2 class="title">Filtrar / Buscar</h2>
       <form class="form">
         <input class="input js_in_search_desc" type="text" placeholder="Descripción" value='' />
-        <input class=" input" type="select" name="raza" placeholder="Raza" id="raza" />
+        <input class="input js_in_search_race" type="select" name="raza" placeholder="Raza" id="raza" />
 
-        <button class="button">Buscar</button>
+        <button class="button js-btn-search">Buscar</button>
+        <label class="error_search"></label>
       </form>
     </section>
 
