--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <section class="new-form  js-new-form">
       <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
       <form class="form">
-        <input class="input js-input-photo" type="text" placeholder="Url de la foto" required />
-        <input class="input js-input-name" type="text" placeholder="Nombre" required />
-        <input class="input" type="text" placeholder="Raza" />
+        <input class="input js-input-photo" type="text" name="photo" placeholder="Url de la foto" required />
+        <input class="input js-input-name" type="text" name="addname" placeholder="Nombre" required />
+        <input class="input js-input-race" type="text" placeholder="Raza" />
         <input class="input js-input-desc" type="text" placeholder="Descripción" required />
         <label class="js-label-error"></label>
         <button class="button js-btn-add">Añadir</button>
