--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </header>
 
   <main>
-    <section class="new-form  js-new-form">
+    <section class="new-form  js-new-form collapsed">
       <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
       <form class="form">
         <input class="input js-input-photo" type="text" name="photo" placeholder="Url de la foto" required />
